# argonaut

./: README.md  io.github.boogiemonster1o1.argonaut.json  meson.build
data/: io.github.boogiemonster1o1.argonaut.appdata.xml.in  io.github.boogiemonster1o1.argonaut.desktop.in  io.github.boogiemonster1o1.argonaut.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  argonaut.gresource.xml  main.vala  meson.build  window.ui  window.vala
